# places_remember

./: README.md  pyproject.toml
places/: urls.py  views.py
places/templates/places/: base.html
places_remember/: asgi.py  settings.py  urls.py  wsgi.py
